<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 搜索 -->
    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://search" />
    </shortcut>

    <!-- 稍后再看：Launcher 通常只展示四个快捷方式，优先保留高频个人功能。 -->
    <shortcut
        android:shortcutId="shortcut_watch_later"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_watch_later"
        android:shortcutShortLabel="@string/shortcut_watch_later_short"
        android:shortcutLongLabel="@string/shortcut_watch_later_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://watch_later" />
    </shortcut>

    <!-- 收藏 -->
    <shortcut
        android:shortcutId="shortcut_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favorite"
        android:shortcutShortLabel="@string/shortcut_favorite_short"
        android:shortcutLongLabel="@string/shortcut_favorite_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://favorite" />
    </shortcut>

    <!-- 历史 -->
    <shortcut
        android:shortcutId="shortcut_history"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://history" />
    </shortcut>
</shortcuts>
